start-modal-hw-05

--- a/index.html
+++ b/index.html
@@ -387,7 +387,8 @@
                 <use href="./images/symbol-defs.svg#icon-facebook">
                 </use>
               </svg></a></li>
-              <li class="footer-soc-item"><a href="" class="footer-soc-link link">
+              <li class="footer-soc-item">
+                <a href="" class="footer-soc-link link">
                 <svg class="footer-soc-icon" width="20" height="20">
                 <use href="./images/symbol-defs.svg#icon-linkedin">
                 </use>
@@ -396,5 +397,10 @@
           </div>                   
       </div>
     </footer>
+    <div class="backdrop">
+      <div class="modal">
+        
+      </div>
+    </div>
   </body>
 </html>
