--- a/portfolio.html
+++ b/portfolio.html
@@ -23,37 +23,37 @@
   <body>
     <header class="page-header">
       <div class="parent-heder container">
-          <nav class="main-nav">
-            <a href="/" class="logo link"
-              ><span class="web">Web</span><span class="studio">Studio</span></a
-            >
-            <ul class="site-nav list">
-              <li class="item"><a href="./index.html" class="link">Студія</a></li>
-              <li class="item"><a href="" class="link current">Портфоліо</a></li>
-              <li class="item"><a href="" class="link">Контакти</a></li>
-            </ul>
-          </nav>        
-          <ul class="contacts-list list">
-            <li class="item">
-              <a href="mailto:info@devstudio.com" class="header-email link">
-                <svg class="header-email-icon" width="16" height="12">
-                <use href="./images/symbol-defs.svg#icon-envelope">
-                </use>
-              </svg>info@devstudio.com</a>
-            </li>
-            <li class="item">
-              <a href="tel:+380961111111" class="header-tel link">
-                <svg class="header-email-icon" width="10" height="16">
-                <use href="./images/symbol-defs.svg#icon-tel">
-                </use>
-              </svg>+38 096 111 11 11</a>
-            </li>
+        <nav class="main-nav">
+          <a href="/" class="logo link"
+            ><span class="web">Web</span><span class="studio">Studio</span></a
+          >
+          <ul class="site-nav list">
+            <li class="item"><a href="./index.html" class="link">Студія</a></li>
+            <li class="item"><a href="" class="link current">Портфоліо</a></li>
+            <li class="item"><a href="" class="link">Контакти</a></li>
           </ul>
+        </nav>
+        <ul class="contacts-list list">
+          <li class="item">
+            <a href="mailto:info@devstudio.com" class="header-email link">
+              <svg class="header-email-icon" width="16" height="12">
+                <use href="./images/symbol-defs.svg#icon-envelope"></use></svg
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="item">
+            <a href="tel:+380961111111" class="header-tel link">
+              <svg class="header-email-icon" width="10" height="16">
+                <use href="./images/symbol-defs.svg#icon-tel"></use></svg
+              >+38 096 111 11 11</a
+            >
+          </li>
+        </ul>
       </div>
     </header>
-    <main>      
-       <section class="work"> 
-        <div class="container">       
+    <main>
+      <section class="work">
+        <div class="container">
           <h1 class="visually-hidden">Наші роботи</h1>
           <ul class="work-btn-list list">
             <li class="item">
@@ -71,17 +71,24 @@
             <li class="item">
               <button type="button" class="button secondary">Маркетинг</button>
             </li>
-          </ul>          
+          </ul>
           <ul class="work-list list">
             <li class="item">
               <a href="" class="work-link">
-                <img class="work-img" src="./images/techno.jpg" alt="" width="370" />
-              
-              <div class="work-card">
-                <h2 class="work-title">Технокряк</h2>
-                <p class="work-text">Веб-сайт</p>
-              </div>
-            </a>
+                <div class="work-top-wrap">
+                  <img class="work-img" src="./images/techno.jpg" alt="" width="370" />
+                  <p class="work-top-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
+                    це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну
+                    особу.
+                  </p>
+                </div>
+                
+                <div class="work-card">
+                  <h2 class="work-title">Технокряк</h2>
+                  <p class="work-text">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="item">
               <a href="" class="work-link">
@@ -157,63 +164,70 @@
                 </div>
               </a>
             </li>
-          </ul>      
-    </div>
-  </section>
+          </ul>
+        </div>
+      </section>
     </main>
     <footer class="footer">
-      <div class=" container">
+      <div class="container">
         <div>
           <a href="/" class="logo address"
-        ><span class="web">Web</span><span class="studio footer">Studio</span></a
-      >  <address>           
-          <ul class="address-list list">
-            <li class="item">
-              <a
-                href="https://goo.gl/maps/J423q69N4XWxt7sN8 "
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-                class="link"
-              >
-                м. Київ, пр-т Лесі Українки, 26</a
-              >
-            </li>
-            <li class="item">
-              <a href="mailto:info@devstudio.com" class="footer-mail">info@devstudio.com</a>
-            </li>
-            <li>
-              <a href="tel:+380961111111" class="footer-tel">+38 096 111 11 11</a>
-            </li>
-          </ul>
-        </address>    
-        </div>    
-       <div class="footer-soc">
+            ><span class="web">Web</span><span class="studio footer">Studio</span></a
+          >
+          <address>
+            <ul class="address-list list">
+              <li class="item">
+                <a
+                  href="https://goo.gl/maps/J423q69N4XWxt7sN8 "
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  class="link"
+                >
+                  м. Київ, пр-т Лесі Українки, 26</a
+                >
+              </li>
+              <li class="item">
+                <a href="mailto:info@devstudio.com" class="footer-mail">info@devstudio.com</a>
+              </li>
+              <li>
+                <a href="tel:+380961111111" class="footer-tel">+38 096 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-soc">
           <h2 class="footer-soc-title">Приєднуйтесь</h2>
           <ul class="footer-soc-list list">
             <li class="footer-soc-item">
               <a href="" class="footer-soc-link link">
-              <svg width="20" height="20">
-              <use href="./images/symbol-defs.svg#icon-instagram" class="footer-soc-icon">
-              </use>
-            </svg></a></li>
-            <li class="footer-soc-item"><a href="" class="footer-soc-link link">
-              <svg class="footer-soc-icon" width="20" height="20">
-              <use href="./images/symbol-defs.svg#icon-twitter">
-              </use>
-            </svg></a></li>
-            <li class="footer-soc-item"><a href="" class="footer-soc-link link">
-              <svg class="footer-soc-icon" width="20" height="20">
-              <use href="./images/symbol-defs.svg#icon-facebook">
-              </use>
-            </svg></a></li>
-            <li class="footer-soc-item"><a href="" class="footer-soc-link link">
-              <svg class="footer-soc-icon" width="20" height="20">
-              <use href="./images/symbol-defs.svg#icon-linkedin">
-              </use>
-            </svg></a></li>
+                <svg width="20" height="20">
+                  <use
+                    href="./images/symbol-defs.svg#icon-instagram"
+                    class="footer-soc-icon"
+                  ></use></svg
+              ></a>
+            </li>
+            <li class="footer-soc-item">
+              <a href="" class="footer-soc-link link">
+                <svg class="footer-soc-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use></svg
+              ></a>
+            </li>
+            <li class="footer-soc-item">
+              <a href="" class="footer-soc-link link">
+                <svg class="footer-soc-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use></svg
+              ></a>
+            </li>
+            <li class="footer-soc-item">
+              <a href="" class="footer-soc-link link">
+                <svg class="footer-soc-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use></svg
+              ></a>
+            </li>
           </ul>
-        </div>                    
-    </div>
-  </footer>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
