--- a/index.html
+++ b/index.html
@@ -399,7 +399,12 @@
     </footer>
     <div class="backdrop">
       <div class="modal">
-        
+        <button type="button" class="modal-close">
+          <svg class="modal-close-icon" width="18" height="18">
+            <use href="./images/symbol-defs.svg#icon-close-black"></use>
+          </svg>
+        </button>
+
       </div>
     </div>
   </body>
