--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
           >
           <ul class="site-nav list">
             <li class="item"><a href="./index.html" class="link">Студія</a></li>
-            <li class="item"><a href="" class="link current">Портфоліо</a></li>
+            <li class="item"><a href="" class="link current portfolio">Портфоліо</a></li>
             <li class="item"><a href="" class="link">Контакти</a></li>
           </ul>
         </nav>
@@ -78,12 +78,12 @@
                 <div class="work-top-wrap">
                   <img class="work-img" src="./images/techno.jpg" alt="" width="370" />
                   <p class="work-top-text">
-                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
-                    це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну
-                    особу.
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
                   </p>
                 </div>
-                
+
                 <div class="work-card">
                   <h2 class="work-title">Технокряк</h2>
                   <p class="work-text">Веб-сайт</p>
