final-corrected-version-hw-05

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           <h2 class="section-title">Чим ми займаємося</h2>
           <ul class="job-list list">
             <li class="item one"><img src="./images/img1.jpg" alt="" width="370" /></li>
-            <li class="item two" ><img src="./images/img2.jpg" alt="" width="370" /></li>
+            <li class="item two"><img src="./images/img2.jpg" alt="" width="370" /></li>
             <li class="item three"><img src="./images/img3.jpg" alt="" width="370" /></li>
           </ul>
         </div>
@@ -269,61 +269,43 @@
           <ul class="customers-list list">
             <li class="customers-item">
               <a href="" class="customers-link link">
-                <svg width="106" height="60">
-                  <use
-                    href="./images/symbol-defs.svg#icon-logo-ya-co"
-                    class="customers-soc-icon"
-                  ></use>
+                <svg class="customers-soc-icon" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-logo-ya-co"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link link">
-                <svg width="106" height="60">
-                  <use
-                    href="./images/symbol-defs.svg#icon-logo-taglaine"
-                    class="customers-soc-icon"
-                  ></use>
+                <svg class="customers-soc-icon" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-logo-taglaine"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link link">
-                <svg width="106" height="60">
-                  <use
-                    href="./images/symbol-defs.svg#icon-logo-company"
-                    class="customers-soc-icon"
-                  ></use>
+                <svg class="customers-soc-icon" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-logo-company"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link link">
-                <svg width="106" height="60">
-                  <use
-                    href="./images/symbol-defs.svg#icon-logo-foster"
-                    class="customers-soc-icon"
-                  ></use>
+                <svg class="customers-soc-icon" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-logo-foster"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link link">
-                <svg width="106" height="60">
-                  <use
-                    href="./images/symbol-defs.svg#icon-logo-brand"
-                    class="customers-soc-icon"
-                  ></use>
+                <svg class="customers-soc-icon" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-logo-brand"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link link">
-                <svg width="106" height="60">
-                  <use
-                    href="./images/symbol-defs.svg#icon-logo-tag"
-                    class="customers-soc-icon"
-                  ></use>
+                <svg class="customers-soc-icon" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-logo-tag"></use>
                 </svg>
               </a>
             </li>
